Refactor configuration handling and controller mapping
Updated Program.cs to use app.MapControllers() for routing.
Replaced MyKey in appsettings.json with a new DataJson
section containing ClientId and ClientSecrect. Added
DataJsonOptions class for mapping configuration values.
Modified HomeController to return DataJson options as
an Ok response.

--- a/ConfiGurationExam/appsettings.json
+++ b/ConfiGurationExam/appsettings.json
@@ -6,5 +6,15 @@
     }
   },
   "AllowedHosts": "*",
-  "MyKey": "MyValue By Get Method"
+  "DataJson": {
+    "ClientId": "CI123A",
+    "ClientSecrect": "eoweioooioiwyazqwerere1as46a",
+    "NEW_Section": {
+      "newData": "TheDAta",
+      "mydata": {
+        "Data": "value"
+      },
+      "hope": "Dope"
+    }
+  }
 }
